k8s/phm/traefik/dset-traefik.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: traefik-ingress-controller
  namespace: kube-system
  labels:
    k8s-app: traefik-ingress-lb
spec:
  selector:
    matchLabels:
      k8s-app: traefik-ingress-lb
  template:
    metadata:
      labels:
        k8s-app: traefik-ingress-lb
        name: traefik-ingress-lb
    spec:
      serviceAccountName: traefik-ingress-controller
      terminationGracePeriodSeconds: 60
      containers:
        - name: traefik-ingress-lb
          image: traefik
          ports:
            - containerPort: 80
              hostPort: 80
              name: http
            - containerPort: 8080
              hostPort: 8080
              name: admin
          volumeMounts:
            - mountPath: /etc/traefik/traefik.toml
              name: traefik
          securityContext:
            capabilities:
              drop:
              - ALL
              add:
              - NET_BIND_SERVICE
          args:
          - --api
          - --kubernetes
          - --logLevel=INFO
          - --configfile=/etc/traefik/traefik.toml
      volumes:
        - name: traefik
          hostPath:
            path: /usr/local/soft/config/traefik/traefik.toml
---
kind: Service
apiVersion: v1
metadata:
  name: traefik-ingress-service
  namespace: kube-system
spec:
  selector:
    k8s-app: traefik-ingress-lb
  ports:
  - protocol: TCP
    port: 80
    name: web
  - protocol: TCP
    port: 8080
    name: admin
