k8s/phm/traefik/srv-nginx.yaml
apiVersion: v1
kind: Service
metadata:
  name: traefik-nginx-service
  namespace: plt-namespace
spec:
  selector:
    app: traefik-nginx
  ports:
  - port: 30080
    targetPort: web
    name: web
